==> ZachGarcia42/RATS-Software/Stepper.cpp <==
#include <cstdlib>
#include <time.h>
#include "Stepper.h"
#include "pico/stdlib.h"

void Stepper::step(int steps_to_move)
{
  int steps_left = abs(steps_to_move);  // how many steps to take

  // determine direction based on whether steps_to_mode is + or -:
  if (steps_to_move > 0) { this->direction = 1; }
  if (steps_to_move < 0) { this->direction = 0; }


  // decrement the number of steps, moving one step each time:
  while (steps_left > 0)
  {
    unsigned long now = to_us_since_boot(get_absolute_time());
    // move only if the appropriate delay has passed:
    if (now - this->last_step_time >= this->step_delay)
    {
      // get the timeStamp of when you stepped:
      this->last_step_time = now;
      // increment or decrement the step number,
      // depending on direction:
      if (this->direction == 1)
      {
        this->step_number++;
        if (this->step_number == this->number_of_steps) {
          this->step_number = 0;
        }
      }
      else
      {
        if (this->step_number == 0) {
          this->step_number = this->number_of_steps;
        }
        this->step_number--;
      }
      // decrement the steps left:
      steps_left--;
      // step the motor to step number 0, 1, ..., {3 or 10}
      if (this->pin_count == 5)
        stepMotor(this->step_number % 10);
      else
        stepMotor(this->step_number % 4);
    }
  }
}

void Stepper::stepMotor(int thisStep)
{
  if (this->pin_count == 2) {
    switch (thisStep) {
      case 0:  // 01
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 1);
      break;
      case 1:  // 11
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 1);
      break;
      case 2:  // 10
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 0);
      break;
      case 3:  // 00
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 0);
      break;
    }
  }
  if (this->pin_count == 4) {
    switch (thisStep) {
      case 0:  // 1010
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 0);
        gpio_put(motor_pin_3, 1);
        gpio_put(motor_pin_4, 0);
      break;
      case 1:  // 0110
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 1);
        gpio_put(motor_pin_3, 1);
        gpio_put(motor_pin_4, 0);
      break;
      case 2:  //0101
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 1);
        gpio_put(motor_pin_3, 0);
        gpio_put(motor_pin_4, 1);
      break;
      case 3:  //1001
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 0);
        gpio_put(motor_pin_3, 0);
        gpio_put(motor_pin_4, 1);
      break;
    }
  }

  if (this->pin_count == 5) {
    switch (thisStep) {
      case 0:  // 01101
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 1);
        gpio_put(motor_pin_3, 1);
        gpio_put(motor_pin_4, 0);
        gpio_put(motor_pin_5, 1);
        break;
      case 1:  // 01001
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 1);
        gpio_put(motor_pin_3, 0);
        gpio_put(motor_pin_4, 0);
        gpio_put(motor_pin_5, 1);
        break;
      case 2:  // 01011
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 1);
        gpio_put(motor_pin_3, 0);
        gpio_put(motor_pin_4, 1);
        gpio_put(motor_pin_5, 1);
        break;
      case 3:  // 01010
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 1);
        gpio_put(motor_pin_3, 0);
        gpio_put(motor_pin_4, 1);
        gpio_put(motor_pin_5, 0);
        break;
      case 4:  // 11010
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 1);
        gpio_put(motor_pin_3, 0);
        gpio_put(motor_pin_4, 1);
        gpio_put(motor_pin_5, 0);
        break;
      case 5:  // 10010
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 0);
        gpio_put(motor_pin_3, 0);
        gpio_put(motor_pin_4, 1);
        gpio_put(motor_pin_5, 0);
        break;
      case 6:  // 10110
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 0);
        gpio_put(motor_pin_3, 1);
        gpio_put(motor_pin_4, 1);
        gpio_put(motor_pin_5, 0);
        break;
      case 7:  // 10100
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 0);
        gpio_put(motor_pin_3, 1);
        gpio_put(motor_pin_4, 0);
        gpio_put(motor_pin_5, 0);
        break;
      case 8:  // 10101
        gpio_put(motor_pin_1, 1);
        gpio_put(motor_pin_2, 0);
        gpio_put(motor_pin_3, 1);
        gpio_put(motor_pin_4, 0);
        gpio_put(motor_pin_5, 1);
        break;
      case 9:  // 00101
        gpio_put(motor_pin_1, 0);
        gpio_put(motor_pin_2, 0);
        gpio_put(motor_pin_3, 1);
        gpio_put(motor_pin_4, 0);
        gpio_put(motor_pin_5, 1);
        break;
    }
  }
}
